# EVM-CPP

include/evm/: evm.h
src/: CMakeLists.txt  advanced_analysis.cpp  advanced_analysis.hpp  advanced_execution.cpp  advanced_execution.hpp  advanced_instructions.cpp  baseline.cpp  baseline.hpp  eof.cpp  eof.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  opcodes_helpers.h  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
